--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Seu navegador não suporta o tipo do vídeo. <a href="mp4/video 1.mp4">Clique aq
     <input type="text" name="Nome"> <br><br>
 
     <label> E-mail</label><br>
-    <input type="email" name="E-mail"><br><br>
+    <input type="email" required name="E-mail"><br><br>
 
     <label> Data de Ida</label><br>
     <input type="date" name="dataIda"><br><br>
@@ -105,7 +105,7 @@ Seu navegador não suporta o tipo do vídeo. <a href="mp4/video 1.mp4">Clique aq
     <input type="number" name="qntPessoas"><br><br>
 
     <label for="">Senha</label><br>
-    <input type="password" name="senha">
+    <input type="password" name="senha"><br><br>
 
     <label>Comentário</label><br>
     <textarea rows="5" name="comentario"></textarea><br><br>
